Fix spacing issue on homepage

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -61,6 +61,10 @@ ul {
   background: black;
 }
 
+.index-about-me {
+  padding-bottom: 15px;
+}
+
 /*----------------------------------------------------------------------------*/
 /* About */
 
